# DesignEngineer

./: .bandit  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  COMPLEX_SHAPES.md  CONTRIBUTING.md  ENHANCED_README.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  REALTIME_SYSTEM_GUIDE.md  REFACTORING_SUMMARY.md  continuous_generator.py  debug_gui_communication.py  demo_enhanced_complex_shapes.py  demo_realtime_freecad.py  demo_state_management.py  direct_generator.py  direct_gui_commands.py  docker-compose.yml  enhanced_main.py  freecad_executor.py  integrated_system.py  interactive_cli.py  monitor.py  mypy.ini  pyproject.toml  pytest.sh  quick_test_workflow.py  requirements.txt  run_enhanced_test.sh  run_freecad.py  setup.cfg  setup_redis.sh  simple_gui_launcher.py  state_cli.py  test_complex_workflow.py  (+6 more)
.github/workflows/: ci.yml
config/: config.yaml  prometheus.yml  redis.conf
docker/: Dockerfile.dev  Dockerfile.production
docs/: ADVANCED_PROMPT_ENGINEERING.md  API_SECURITY_COMPLETE.md  AUDIT_REPORT.md  CHANGELOG.md  DEEPSEEK_R1_INTEGRATION.md  DEEPSEEK_R1_INTEGRATION_SUMMARY.md  DEEPSEEK_R1_QUICKSTART.md  ENHANCED_COMPLEX_SHAPES.md  ENHANCED_SYSTEM_IMPROVEMENTS.md  ENHANCEMENT_SUMMARY.md  EXAMPLES_GUIDE.md  EXECUTION_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  PHASE_2_EXECUTION_PLAN.md  PHASE_3_EXECUTION_PLAN.md  PHASE_3_STAGE_1_SUMMARY.md  PRACTICAL_IMPLEMENTATION_PLAN.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  QUICK_START_ENHANCED.md  REALTIME_SYSTEM_GUIDE.md  SECURITY_GUIDE.md  STATE_ANALYSIS.md  STATE_MANAGEMENT.md  TOOLS_GUIDE.md  architecture.md  fix.md
docs/advanced/: COMPLEX_SHAPES.md  COMPLEX_SHAPES_GUIDE.md
docs/guides/: DEEPSEEK_R1_GUIDE.md  QUICK_START.md  SECURITY_GUIDE.md  STATE_GUIDE.md
examples/: demo_advanced_prompt_engineering.py  demo_deepseek_r1.py  demo_deepseek_r1_clean.py  demo_enhanced_complex_shapes.py  demo_enhanced_system.py  demo_orchestrator.py  demo_prompt_system.py  demo_state_management.py  integrated_system.py  integration_example.py  run_freecad.py  state_cli_example.py  test_execution_example.py  test_improved_prompting_example.py  websocket_client_example.py
examples/demos/: demo_continuous_updates.py  demo_persistent_fix.py  demo_real_execution.py  demo_realtime_freecad.py  demo_realtime_gui.py
scripts/: analyze_freecad_apis.py  debug_cli.py  debug_model_creation.py  demo_unified_llm.py  direct_deepseek_cli.py  run_complex_demo.sh  run_enhanced_test.sh  run_tests.sh  setup-dev.sh  setup_deepseek_r1.sh  setup_redis.sh  test_corrected_code.py  test_deepseek_direct.py  test_deepseek_end_to_end.py  test_enhanced_system.sh  test_fixed_code.py  unified_cli_examples.sh
src/: analyze.py  check.py  cli.py  main.py
src/ai_designer/: __init__.py  __main__.py  cli.py
src/ai_designer/agents/: __init__.py  base.py  executor.py  generator.py  orchestrator.py  planner.py  validator.py
src/ai_designer/api/: __init__.py  app.py  deps.py
src/ai_designer/cli_pkg/: __init__.py  app.py  commands.py  display.py  session.py
src/ai_designer/config/: __init__.py  secure_config.py
src/ai_designer/core/: __init__.py  advanced_prompt_engine.py  command_generator.py  complex_shape_generator.py  enhanced_complex_generator.py  exceptions.py  intent_processor.py  llm_provider.py  logging_config.py  metrics.py  orchestrator.py  queue_manager.py  sandbox.py  state_analyzer.py  state_llm_integration.py
src/ai_designer/export/: __init__.py  exporter.py
src/ai_designer/freecad/: __init__.py  api_client.py  command_executor.py  face_selection_engine.py  geometry_helpers.py  headless_runner.py  path_resolver.py  persistent_gui_client.py  state_aware_processor.py  state_diff.py  state_extractor.py  state_manager.py  workflow_orchestrator.py  workflow_templates.py
src/ai_designer/llm/: __init__.py  client.py  deepseek_client.py  model_config.py  prompt_templates.py  unified_manager.py
src/ai_designer/orchestration/: __init__.py  callbacks.py  nodes.py  pipeline.py  routing.py  state.py
src/ai_designer/parsers/: command_parser.py
src/ai_designer/realtime/: __init__.py  websocket_manager.py
src/ai_designer/redis_utils/: __init__.py  audit.py  client.py  pubsub_bridge.py  state_cache.py
src/ai_designer/sandbox/: __init__.py  executor.py  result.py  sandbox.py  validator.py
src/ai_designer/schemas/: __init__.py  api_schemas.py  design_state.py  llm_schemas.py  task_graph.py  validation.py
src/ai_designer/services/: __init__.py  state_service.py
src/core/: command_generator.py  intent_processor.py  orchestrator.py
src/freecad/: api_client.py  command_executor.py  state_aware_processor.py  state_manager.py
src/llm/: client.py  prompt_templates.py
src/realtime/: websocket_manager.py
src/redis/: client.py  state_cache.py
src/redis_utils/: state_cache.py
src/services/: __init__.py  state_service.py
tests/: README.md  conftest.py  demo_sketch_workflow.py  test_complex_models.py  test_cylinder_validation.py  test_enhanced_system.py  test_freecad.py  test_gear_generation.py  test_imports.py  test_improved_prompting_system.py  test_integration.py  test_llm.py  test_phase2_integration.py  test_phase3_integration.py  test_phase3_workflow.py  test_redis.py  test_sketch_then_operate.py  test_state_analysis.py  test_state_aware.py  test_workflow_simple.py  validate_phase1_system.py  verify_structure.py
tests/fixtures/: sample_prompts.json  sample_responses.json  sample_scripts.py
tests/integration/: test_api.py  test_audit_trail.py  test_pipeline.py
tests/load/: README.md  locustfile.py
tests/unit/: test_sandbox.py
tools/: continuous_generator.py  direct_generator.py  interactive_cli.py
tools/debug/: debug_gui_communication.py
tools/gui/: direct_gui_commands.py  simple_gui_launcher.py
tools/monitoring/: websocket_monitor.py
tools/testing/: test_complex_workflow.py  test_persistent_gui_fix.py  test_realtime_commands.py  test_redis_demo.py
tools/utilities/: create_gear.py  freecad_executor.py  quick_test_workflow.py  verify_real_objects.py
(+35 files in other folders)
