[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_designer"
version = "0.1.0"
authors = [
  { name="AI Designer Team", email="contact@ai-designer.com" },
]
description = "An AI assistant for parametric CAD design in FreeCAD."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Computer Aided Design (CAD)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Flask>=2.0.1",
    "redis>=4.0.2",
    "requests>=2.25.1",
    "openai>=0.11.3",
    "numpy>=1.21.0",
    "PyYAML>=6.0",
    "langchain",
    "google-generativeai",
    "websockets>=10.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
"Homepage" = "https://github.com/your-username/ai-designing-designengineer"
"Bug Tracker" = "https://github.com/your-username/ai-designing-designengineer/issues"
"Documentation" = "https://ai-designing-designengineer.readthedocs.io/"
"Source Code" = "https://github.com/your-username/ai-designing-designengineer"

[project.scripts]
ai-designer = "ai_designer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
