[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_designer"
version = "0.1.0"
authors = [
  { name="AI Designer Team", email="contact@ai-designer.com" },
]
description = "An AI assistant for parametric CAD design in FreeCAD."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering :: Computer Aided Design (CAD)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Flask>=2.0.1",
    "redis>=4.0.2",
    "requests>=2.25.1",
    "openai>=0.11.3",
    "numpy>=1.21.0",
    "PyYAML>=6.0",
    "langchain",
    "google-generativeai",
    "websockets>=10.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "accelerate>=0.20.0",
    "pydantic>=1.8.0",
    "structlog>=23.1.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.9.1",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "pylint>=2.17.5",
    "bandit[toml]>=1.7.5",
    "pbr>=5.11.1",
    "pre-commit>=3.4.0",
    "safety>=2.3.5",
    "coverage>=7.3.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31.0",
    "types-redis>=4.6.0",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
"Homepage" = "https://github.com/your-username/ai-designing-designengineer"
"Bug Tracker" = "https://github.com/your-username/ai-designing-designengineer/issues"
"Documentation" = "https://ai-designing-designengineer.readthedocs.io/"
"Source Code" = "https://github.com/your-username/ai-designing-designengineer"

[project.scripts]
ai-designer = "ai_designer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["ai_designer"]
known_third_party = ["flask", "redis", "openai", "numpy", "yaml", "websockets", "fastapi", "uvicorn", "torch", "transformers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing --cov-report=html --cov-report=xml -p no:launch_testing -p no:launch_testing_ros_pytest_entrypoint -p no:ament_mypy -p no:ament_copyright -p no:ament_lint -p no:ament_flake8 -p no:ament_pep257 -p no:ament_xmllint"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "FreeCAD.*",
    "freecad.*",
]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
    "W0613",  # Unused argument
]

[tool.pylint.format]
max-line-length = 88

[tool.bandit]
exclude_dirs = ["tests", "venv", "build", "dist"]
skips = ["B101", "B601"]
